# mymetrics

./: CMakeLists.txt  README.md  declare.sql
src/: dice.cc  dice.h  dmetaphone.cc  dmetaphone.h  jarowinkler.cc  jarowinkler.h  levenshtein.cc  levenshtein.h  mymetrics.cc
